--- a/apps/client/src/components/criminals/criminals.module.css
+++ b/apps/client/src/components/criminals/criminals.module.css
@@ -7,7 +7,7 @@
   height: 100%;
 }
 .criminalsContainer {
-  height: 90%;
+  height: 100%;
   flex-direction: column;
   overflow-y: scroll;
   display: flex;
@@ -22,9 +22,6 @@
   grid-template-rows: repeat(2, 1fr);
   gap: 0.5em;
   padding: 0.5em;
-  scrollbar-width: thin;
-  scrollbar-color: var(---red-border-color) var(---white-color);
-  overflow-y: scroll;
 }
 .divider {
   width: 100%;
