--- a/apps/client/src/components/toasts/toasts.module.css
+++ b/apps/client/src/components/toasts/toasts.module.css
@@ -11,32 +11,25 @@
   display: flex;
   gap: 0.5em;
   padding: 0.5em;
-  height: 90%;
+  height: 100%;
   scrollbar-width: thin;
-  scrollbar-color: var(---red-border-color) var(---white-color);
+  scrollbar-color: var(---green-border-color) var(---white-color);
 }
 .toastsGridLoggedIn {
-  overflow-y: scroll;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 0.5em;
   padding: 0.5em;
-  height: 90%;
-  scrollbar-width: thin;
-  scrollbar-color: var(---green-border-color) var(---white-color);
 }
 
 .toastsGridNotLoggedIn {
-  padding-top: 2em;
-  overflow: scroll;
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   grid-template-rows: repeat(2, 1fr);
   gap: 4em;
-  scrollbar-width: thin;
-  scrollbar-color: var(---green-border-color) var(---white-color);
   height: 100%;
+  padding: 2em;
 }
 
 .divider {
